Archive2/a8/cf1896253eeec2/output
main.cpp:6:5: error: use of undeclared identifier 'sort'; did you mean 'short'?
    sort(array.begin(), array.end());
    ^
1 error generated.
