Archive2/a8/cf1896253eeec2/main.cpp
#include <iostream>
#include <vector>

int main() {
    std::vector<int> array(10);
    sort(array.begin(), array.end());
}
